--- a/src/assets/scss/post_content.scss
+++ b/src/assets/scss/post_content.scss
@@ -10,8 +10,10 @@
   }
 
   a {
-    color: var(--secondary);
-    text-decoration: underline;
+    @apply text-secondary underline;
+    &:hover {
+      @apply text-primary;
+    }
   }
 
   h1, h2, h3, h4, h5, h6 {
@@ -72,14 +74,6 @@
 
       @screen md {
         @apply text-6xl;
-      }
-    }
-  }
-  >p {
-    a {
-      @apply border-b-2 border-primary;
-      &:hover {
-        @apply text-primary;
       }
     }
   }
