--- a/src/main.scss
+++ b/src/main.scss
@@ -87,65 +87,20 @@ button:focus, a:focus, input:focus {
 .lines-6 {
   height: 9em;
 }
+.rtTooltip {
+  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1);
 
-.linehover {
-  position: relative;
-  &:before,
-  &:after {
-    content: "";
-    position: absolute;
-    bottom: -4px;
-    width: 0px;
-    height: 2px;
-    margin: 2px 0 0;
-    transition-property: opacity, width;
-    transition-duration: .4s;
-    transition-timing-function: ease-in-out;
-    opacity: 0;
-    background-color: var(--primary);
+
+  .rtTooltipBody {
+    @apply font-sans font-light text-white text-base;
   }
-  &.to-right {
-    &:before,
-    &:after {
-      left: 0;
-    }
+
+  .rtTooltipHeader {
+    @apply font-sans text-gray-200 text-sm;
   }
-  &.to-left {
-    &:before,
-    &:after {
-      right: 0;
-    }
-  }
-  &.out {
-    &:before {
-      left: 50%;
-    }
-    &:after {
-      right: 50%;
-    }
-  }
-  &.in {
-    &:before {
-      left: 0;
-    }
-    &:after {
-      right: 0;
-    }
-  }
-  &:hover {
-    cursor: pointer;
-    &:before,
-    &:after {
-      width: 100%;
-      opacity: 1;
-    }
-    &.out,
-    &.in {
-      &:before,
-      &:after {
-        width: 50%;
-      }
-    }
+
+  .rtTooltipFooter {
+    @apply font-mono text-xs;
   }
 }
 
