--- a/src/main.scss
+++ b/src/main.scss
@@ -52,6 +52,7 @@ html, body {
   scroll-behavior: smooth;
   -webkit-tap-highlight-color: transparent; /* for removing the highlight */
   @apply font-sans;
+  font-weight: 400;
   padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
 
