--- a/src/main.scss
+++ b/src/main.scss
@@ -53,6 +53,7 @@ html, body {
   -webkit-tap-highlight-color: transparent; /* for removing the highlight */
   @apply font-sans;
   font-weight: 400;
+  line-height: 1.25;
   padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
 
